--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 
 <body>
   <main>
-
     <header>
-      <img src="images/logo.svg" alt="">
+      <img src="images/logo.svg" alt="logo">
     </header>
 
     <article>
