modified hmtl y css

--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 </head>
 
 <body>
-  <main>
-    <header>
+  <main class="content-center container">
+    <header class="header">
       <img src="images/logo.svg" alt="logo">
     </header>
 
-    <article>
+    <div class="box-content">
       <img src="images/illustration-mockups.svg" alt="">
 
-      <section class="texts">
-        <h1>Build The Community Your Fans Will Love</h1>
+      <section class="content-texts">
+        <h1 class="title">Build The Community Your Fans Will Love</h1>
 
-        <p>Huddle re-imagines the way we build communities. 
+        <p class="paragraph">Huddle re-imagines the way we build communities. 
         You have a voice, but so does your audience. 
         Create connections with your users as you engage 
         in genuine discussion. 
@@ -29,7 +29,7 @@
         <button>Register</button>
       </section>
 
-    </article>
+    </div>
 
     <footer> 
       <ul>
